--- a/app_uniplan/templates/app_uniplan/sequences.html
+++ b/app_uniplan/templates/app_uniplan/sequences.html
@@ -24,10 +24,25 @@
 {% endfor %}
 
 
+
 <h2>Are we missing your major/minor? Add it now!</h2>
 
-<form method=POST style=".table">
+<h3>Add a Major/Minor via the Deakin Guide URL</h3>
+<a href="https://www.deakin.edu.au/current-students-courses/detail.php?customer_cd=C&service_item=S326&version_number=2&element_cd=MAJORS-STRUCTURE&sub_item_number=14&year=2022&return_to=%2Fcurrent-students-courses%2Fcourse.php%3Fcourse%3DS326%26keywords%3Dbachelor%2Bof%2Binformation%2Btechnology%26version%3D2%26year%3D2022">Example input</a>
+
+<form method=POST>
 	{% csrf_token %}
-	{{ form.as_p }}
+	{{ scrape_url_form.as_p }}
+	{{ scrape_url_form.submit }}
+
+</form>
+
+<h3>Or, add it manually</h3>
+
+<form method=POST>
+	{% csrf_token %}
+	{{ add_unit_form.as_table }}
+	<button type="submit">Add Unit</button>
+</form>
 
 {% endblock %}
